Fixed bug on ip-info responsiveness on small devices

--- a/src/app/ip-info/ip-info.component.css
+++ b/src/app/ip-info/ip-info.component.css
@@ -54,7 +54,7 @@
 @media (max-width: 950px) {
   :host{
     width: 90%;
-    transform: translateY(10%);
+    transform: translateY(60%);
   }
   .ip-info{
     display: flex;
@@ -77,5 +77,11 @@
   .info{
     margin-top: 7px;
     font-size: 20px;
+  }
+}
+
+@media (max-width: 370px) {
+  :host{
+    transform: translateY(65%);
   }
 }
